# psi-shared

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  dependencies.cmake
psi/: CMakeLists.txt
psi/examples/1.0_Simple_SharedMemory/: EntryPoint.cpp  ITest.h  TestClient.h  TestServer.h
psi/include/psi/shared/: Deserializer.h  IBaseSharedMemoryObject.hpp  ISharedMemoryObject.hpp  Serializer.h  SynchType.h  i_sm_manager.h  i_sm_managers.h  i_sm_object.h  ipc_config.h  os_mutex.h
psi/include/psi/shared/ipc/: IPCCall.h  IPCCallback.h  IPCError.h  IPCEvent.h  TemplateHelpers.h
psi/include/psi/shared/ipc/client/: IClientIPC.hpp  IEventClientIPC.h  TemplateHelpers.h  Types.h
psi/include/psi/shared/ipc/protocol/: Common.h  Deserializer.h  Serializable.h  Serializer.h
psi/include/psi/shared/ipc/server/: IEventServerIPC.h  IPCServiceRunner.h  IServerIPC.h  IServerIPCBase.h  MemberFnWrapper.h
psi/include/psi/shared/ipc/space/: CallSpace.h  CallbackSpace.h  EventRingBuffer.h  EventSpace.h
psi/src/psi/shared/: BaseSharedMemoryObject.hpp  os_mutex.cpp  os_mutex.h  sm_manager_impl.h  sm_managers.cpp  sm_object_impl.h
psi/src/psi/shared/ipc/: IPCTemplates.cpp
psi/src/psi/shared/ipc/client/: ClientIPC.cpp
psi/src/psi/shared/ipc/server/: ServerIPCBase.cpp
psi/tests/: CallSpace_Tests.cpp  CallbackSpace_Tests.cpp  EventRingBuffer_Tests.cpp  EventSpace_Tests.cpp  IPCCall_Tests.cpp  IPCClientServer_Tests.cpp  IPCClientServer_Tests.h  SerializeDeserialize_Tests.cpp
sources/psi-shared/: CMakeLists.txt
sources/psi-shared/psi/: CMakeLists.txt
sources/psi-shared/psi/examples/1.0_Simple_SharedMemory/: EntryPoint.cpp  TestServer.h
sources/psi-shared/psi/include/psi/shared/: Deserializer.h  IBaseSharedMemoryObject.hpp  ISharedMemoryManager.hpp
sources/psi-shared/psi/include/psi/shared/ipc/: IPCCall.h  IPCEvent.h
sources/psi-shared/psi/include/psi/shared/ipc/client/: IClientIPC.hpp  Types.h
sources/psi-shared/psi/include/psi/shared/ipc/server/: IEventServerIPC.h  IPCServiceRunner.h  IServerIPC.h  IServerIPCBase.h  MemberFnWrapper.h
sources/psi-shared/psi/include/psi/shared/ipc/space/: CallSpace.h  EventSpace.h
sources/psi-shared/psi/src/psi/shared/: BaseSharedMemoryObject.hpp  SharedMemoryManager.hpp  SharedMemoryObject.hpp
sources/psi-shared/psi/src/psi/shared/ipc/server/: ServerIPCBase.cpp
tests/: EntryPoint.cpp
